Fix button display style problem on Safari
Set margin and padding to 0 to replace the default settings on Safari.

--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@
   padding-left: 10px;
   font-size: 0.8em;
   color: #48484A;
-  border: 1px solid #D70015;
+  border: 1px solid #FFFFFF;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
