--- a/main.css
+++ b/main.css
@@ -118,6 +118,8 @@ nav {
   -moz-transition: color 0.5s;
   -o-transition: color 0.5s;
   transition: color 0.5s;
+  margin: 0;
+  padding: 0;
 }
 
 .qotd {
