--- a/quote-img/quote-img.css
+++ b/quote-img/quote-img.css
@@ -28,9 +28,10 @@ main {
   padding-left: 10px;
   color: #48484A;
   font-size: 0.8em;
-  border: 1px solid #D70015;
+  border: 1px solid #FFFFFF;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
+  line-height: 1;
 }
 
 .search-btn {
